--- a/recetas.html
+++ b/recetas.html
@@ -25,18 +25,22 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="Home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Artículos</a>
+                            <a class="nav-link" href="articulos.html">Artículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recetas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Registros</a>
-                        </li>
+                          <a class="nav-link" href="recetas.html">Recetas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="login.html">Controla tu vida</a>
+                    </li>
                     </ul>
+                </div>
+                <div class="d-flex justify-content-end">
+                  <button class="btn btn-primary me-2 btn-inicio">Registrarse</button>
+                  <button class="btn btn-secondary btn-signup">Iniciar Sesión</button>
                 </div>
             </div>
         </nav>
@@ -135,16 +139,16 @@
                   <h4 class="widget-title mb-4 ">Leer más</h4>
                   <ul class="list-unstyled text-primary text-white">
                     <li class="mb-2">
-                      <a href="#!" class="link-secondary text-decoration-none text-white">Home</a>
+                      <a href="home.html" class="link-secondary text-decoration-none text-white">Home</a>
                     </li>
                     <li class="mb-2">
-                      <a href="#!" class="link-secondary text-decoration-none text-white">Artículos</a>
+                      <a href="articulos.html" class="link-secondary text-decoration-none text-white">Artículos</a>
                     </li>
                     <li class="mb-2">
-                        <a href="#!" class="link-secondary text-decoration-none text-white">Recetas</a>
+                        <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                       </li>
                     <li class="mb-2">
-                      <a href="#!" class="link-secondary text-decoration-none text-white">Registros</a>
+                      <a href="login.html" class="link-secondary text-decoration-none text-white">Registros</a>
                     </li>
                     
                   </ul>
