--- a/formulario.html
+++ b/formulario.html
@@ -33,7 +33,7 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active text-white " aria-current="page" href="#">Home</a>
+                                <a class="nav-link active text-white " aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="articulos.html">Artículos</a>
@@ -42,7 +42,7 @@
                                 <a class="nav-link" href="recetas.html">Recetas</a>
                             </li>
                             <li>
-                              <a class="nav-link text-center" href="login.html">Controla tu salud</a>
+                              <a class="nav-link text-center" href="formulario.html">Controla tu salud</a>
                             </li>
                         </ul>
                     </div>
