--- a/formulario.html
+++ b/formulario.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>LandingPage</title>
+        <title>Registrar Insulina</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="articulos.html">Artículos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="recetas.html">Recetas</a>
+                                <a class="nav-link" href="listaRecetas.html">Recetas</a>
                             </li>
                             <li>
                               <a class="nav-link text-center" href="formulario.html">Controla tu salud</a>
@@ -126,13 +126,13 @@
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-xl-2 text-primary text-white">
                   <div class="widget">
-                    <h4 class="widget-title mb-4 ">encontranos</h4>
-                    <address class="mb-4 text-white" >plaza san martin </address>
+                    <h4 class="widget-title mb-4 ">Encontranos </h4>
+                    <address class="mb-4 text-white" >Instituto Politécnico Formosa</address>
                     <p class="mb-1">
-                      <a class="link-secondary text-decoration-none text-white" href="tel:+15057922430">12345678</a>
+                      <a class="link-secondary text-decoration-none text-white" >+54 937040000</a>
                     </p>
                     <p class="mb-0">
-                      <a class="link-secondary text-decoration-none text-white" href="mailto:demo@yourdomain.com">diabetes@gmail.com</a>
+                      <a class="link-secondary text-decoration-none text-white" >glucontrol@gmail.com</a>
                     </p>
                   </div>
                 </div>
@@ -141,16 +141,16 @@
                     <h4 class="widget-title mb-4 ">Leer más</h4>
                     <ul class="list-unstyled text-primary text-white">
                       <li class="mb-2">
-                        <a href="#!" class="link-secondary text-decoration-none text-white">Home</a>
+                        <a href="home.html" class="link-secondary text-decoration-none text-white">Home</a>
                       </li>
                       <li class="mb-2">
                         <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                       </li>
                       <li class="mb-2">
-                        <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                        <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                       </li>
                       <li class="mb-2">
-                        <a href="login.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                        <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
                       </li>
                     </ul>
                   </div>
@@ -158,7 +158,7 @@
                 <div class="col-12 col-lg-3 col-xl-4">
                   <div class="widget text-white">
                     <h4 class="widget-title mb-4">Contactanos</h4>
-                    <p class="mb-4">Suscribiti y enterate de lo último</p>
+                    <p class="mb-4">Suscribite y enterate de lo último</p>
                     <form action="#!">
                       <div class="row gy-4">
                         <div class="col-12">
@@ -173,7 +173,7 @@
                         </div>
                         <div class="col-12">
                           <div class="d-grid">
-                            <button class="btn-footer" type="submit">Subscribe</button>
+                            <button class="btn-footer" type="submit">Suscribirse</button>
                           </div>
                         </div>
                       </div>
