--- a/client/login.html
+++ b/client/login.html
@@ -36,7 +36,7 @@
                             type="text"
                             class="form-control bg-transparent bt-dark"
                             name="yo"
-                            id=""
+                            id="nameInput"
                             aria-describedby="helpId"
                             placeholder="Fulanito";
                         />
@@ -47,7 +47,7 @@
                             type="password"
                             class="form-control bg-transparent"
                             name=""
-                            id=""
+                            id="passwordInput"
                             aria-describedby="helpId"
                             placeholder=""
                         />
@@ -59,6 +59,7 @@
                     <button
                         type="button"
                         class="btn btn-primary w-20 d-flex rounded-4 mt-2"
+                        onclick="iniciarSesion()"
                     >
                         Iniciar Sesión
                     </button>
@@ -81,5 +82,6 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+        <script src="./assets/js/login.js"></script>
     </body>
 </html>
