--- a/client/signup.html
+++ b/client/signup.html
@@ -80,8 +80,9 @@
                         type="button"
                         id="crearCuenta"
                         class="btn btn-primary w-20 d-flex rounded-4 mt-3 mb-4"
+                        onclick="registrarse()"
                     >
-                        Iniciar Sesión
+                        Registrarse
                     </button>
                     </div>
                 </div>
@@ -102,5 +103,7 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+
+        <script src="./assets/js/signup.js"></script>
     </body>
 </html>
