Se agregó el Inicio de Sesión y los tokens

--- a/client/login.html
+++ b/client/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Glucontrol - Iniciar Sesión</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -24,11 +24,11 @@
             <!-- place navbar here -->
         </header>
         <main>
-            <div class="container d-flex flex-row col-md-8 mt-5 ">
+            <div class="container d-flex flex-row col-md-8 mt-5 rounded-3">
                 <!-- Acá está la imágen -->
                 <div class="imagen bg-dark d-flex w-50"><img src="fondo.jpg" width="auto" height="400px" alt="" srcset=""></div>
                 <!-- Acá está el formulario -->
-                <div class="formulario bg-danger w-50 d-flex flex-column align-items-center pt-5">
+                <div class="formulario bg-white w-50 d-flex flex-column align-items-center pt-5">
                     <h3>Iniciar Sesión</h3>
                     <div class="mb-3 w-75 ">
                         <label for="" class="form-label ">Nombre de Usuario</label>  
