--- a/client/formulario.html
+++ b/client/formulario.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>LandingPage</title>
+        <title>Registrar Insulina</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="articulos.html">Artículos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="recetas.html">Recetas</a>
+                                <a class="nav-link" href="listaRecetas.html">Recetas</a>
                             </li>
                             <li>
                               <a class="nav-link text-center" href="formulario.html">Controla tu salud</a>
@@ -82,32 +82,10 @@
                             <input type="text" class="form-control" id="viaAdministracion" placeholder="Ingrese la vía de administración">
                         </div>
                         <div class="mb-3">
-                            <label for="nivelGlucosa" class="form-label">Nivel de Glucosa</label>
-                            <input type="number" class="form-control" id="nivelGlucosa" placeholder="Ingrese el nivel de glucosa">
-                        </div>
-                        <div class="mb-3">
-                            <label for="comida" class="form-label">Después de qué comida</label>
-                            <select class="form-select" id="comida">
-                                <option selected>Seleccione</option>
-                                <option value="desayuno">Desayuno</option>
-                                <option value="almuerzo">Almuerzo</option>
-                                <option value="cena">Cena</option>
-                                <option value="merienda">Merienda</option>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="carbohidratos" class="form-label">Cantidad de Carbohidratos</label>
-                            <input type="number" class="form-control" id="carbohidratos" placeholder="Ingrese la cantidad de carbohidratos">
-                        </div>
-                        <div class="mb-3">
-                            <label for="actividadFisica" class="form-label">Actividad Física</label>
-                            <input type="text" class="form-control" id="actividadFisica" placeholder="Describa la actividad física realizada">
-                        </div>
-                        <div class="mb-3">
                             <label for="notasAdicionales" class="form-label">Notas Adicionales</label>
                             <textarea class="form-control" id="notasAdicionales" rows="3" placeholder="Ingrese cualquier nota adicional"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-form">Guardar</button>
+                        <button type="button" onclick="guardar()" class="btn btn-primary btn-form">Guardar</button>
                     </form>
                 </div>
             </div>
@@ -126,13 +104,13 @@
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-xl-2 text-primary text-white">
                   <div class="widget">
-                    <h4 class="widget-title mb-4 ">encontranos</h4>
-                    <address class="mb-4 text-white" >plaza san martin </address>
+                    <h4 class="widget-title mb-4 ">Encontranos </h4>
+                    <address class="mb-4 text-white" >Instituto Politécnico Formosa</address>
                     <p class="mb-1">
-                      <a class="link-secondary text-decoration-none text-white" href="tel:+15057922430">12345678</a>
+                      <a class="link-secondary text-decoration-none text-white" >+54 937040000</a>
                     </p>
                     <p class="mb-0">
-                      <a class="link-secondary text-decoration-none text-white" href="mailto:demo@yourdomain.com">diabetes@gmail.com</a>
+                      <a class="link-secondary text-decoration-none text-white" >glucontrol@gmail.com</a>
                     </p>
                   </div>
                 </div>
@@ -141,16 +119,16 @@
                     <h4 class="widget-title mb-4 ">Leer más</h4>
                     <ul class="list-unstyled text-primary text-white">
                       <li class="mb-2">
-                        <a href="#!" class="link-secondary text-decoration-none text-white">Home</a>
+                        <a href="home.html" class="link-secondary text-decoration-none text-white">Home</a>
                       </li>
                       <li class="mb-2">
                         <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                       </li>
                       <li class="mb-2">
-                        <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                        <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                       </li>
                       <li class="mb-2">
-                        <a href="login.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                        <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
                       </li>
                     </ul>
                   </div>
@@ -158,7 +136,7 @@
                 <div class="col-12 col-lg-3 col-xl-4">
                   <div class="widget text-white">
                     <h4 class="widget-title mb-4">Contactanos</h4>
-                    <p class="mb-4">Suscribiti y enterate de lo último</p>
+                    <p class="mb-4">Suscribite y enterate de lo último</p>
                     <form action="#!">
                       <div class="row gy-4">
                         <div class="col-12">
@@ -173,7 +151,7 @@
                         </div>
                         <div class="col-12">
                           <div class="d-grid">
-                            <button class="btn-footer" type="submit">Subscribe</button>
+                            <button class="btn-footer" type="submit">Suscribirse</button>
                           </div>
                         </div>
                       </div>
@@ -232,7 +210,7 @@
           </div>
         
         </footer>
-      
+      <script src="assets/js/formInsulina.js"></script>
       <script
           src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
           integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
