--- a/client/signup.html
+++ b/client/signup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Glucontrol - Registrarse</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
