se agregó el logo a las paginas

--- a/listaRecetas.html
+++ b/listaRecetas.html
@@ -18,7 +18,7 @@
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="#" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -38,9 +38,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <button class="btn btn-primary me-2 btn-inicio">Registrarse</button>
-                    <button class="btn btn-secondary btn-signup">Iniciar Sesión</button>
+                <div class="d-flex justify-content-end" id="usuarioD">
+                  <button class="btn btn-secondary btn-signup" id="usuarioB">Iniciar Sesión</button>
                 </div>
             </div>
         </nav>
@@ -126,7 +125,7 @@
               <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <div class="widget">
                   <a href="#!">
-                    <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                    <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
                   </a>
                 </div>
               </div>
