--- a/recetas/receta2.html
+++ b/recetas/receta2.html
@@ -27,7 +27,7 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="#" class="navbar-brand nav-logo"><img src="../assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -102,14 +102,14 @@
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                     <div class="widget">
                       <a href="#!">
-                        <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                        <img src="../assets/img/logoedit.jpg" alt="" width="175" height="57">
                       </a>
                     </div>
                   </div>
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2 text-primary text-white">
                     <div class="widget">
-                      <h4 class="widget-title mb-4 ">encontranos</h4>
-                      <address class="mb-4 text-white" >plaza san martin </address>
+                      <h4 class="widget-title mb-4 ">Encontranos</h4>
+                      <address class="mb-4 text-white" >Instituto Politécnico Formosa </address>
                       <p class="mb-1">
                         <a class="link-secondary text-decoration-none text-white" href="tel:+15057922430">12345678</a>
                       </p>
@@ -140,7 +140,7 @@
                   <div class="col-12 col-lg-3 col-xl-4">
                     <div class="widget text-white">
                       <h4 class="widget-title mb-4">Contactanos</h4>
-                      <p class="mb-4">Suscribiti y enterate de lo último</p>
+                      <p class="mb-4">Suscribite y enterate de lo último</p>
                       <form action="#!">
                         <div class="row gy-4">
                           <div class="col-12">
@@ -155,7 +155,7 @@
                           </div>
                           <div class="col-12">
                             <div class="d-grid">
-                              <button class="btn-footer" type="submit">Subscribe</button>
+                              <button class="btn-footer" type="submit">Suscribite</button>
                             </div>
                           </div>
                         </div>
