--- a/articulos/articulo1.html
+++ b/articulos/articulo1.html
@@ -16,8 +16,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="../assets/css/articulos.css">
-        <link rel="stylesheet" href="articulo1.css">
+        <link rel="stylesheet" href="articulo.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -27,7 +26,7 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="#" class="navbar-brand nav-logo"><img src="../assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,7 +48,7 @@
                     </ul>
                 </div>
                 <div class="d-flex justify-content-end">
-                  <button class="btn btn-primary me-2 btn-inicio">Registrarse</button>
+                  
                   <button class="btn btn-secondary btn-signup">Iniciar Sesión</button>
                 </div>
             </div>
@@ -105,7 +104,7 @@
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                     <div class="widget">
                       <a href="#!">
-                        <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                        <img src="../assets/img/logoedit.jpg" alt="" width="175" height="57">
                       </a>
                     </div>
                   </div>
@@ -143,7 +142,7 @@
                   <div class="col-12 col-lg-3 col-xl-4">
                     <div class="widget text-white">
                       <h4 class="widget-title mb-4">Contactanos</h4>
-                      <p class="mb-4">Suscribiti y enterate de lo último</p>
+                      <p class="mb-4">Suscribite y enterate de lo último</p>
                       <form action="#!">
                         <div class="row gy-4">
                           <div class="col-12">
