--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="#" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -231,14 +231,14 @@
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                     <div class="widget">
                       <a href="#!">
-                        <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                        <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
                       </a>
                     </div>
                   </div>
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2 text-primary text-white">
                     <div class="widget">
                       <h4 class="widget-title mb-4 ">Encontranos</h4>
-                      <address class="mb-4 text-white" >plaza san martin </address>
+                      <address class="mb-4 text-white" >Instituto Politécnico Formosa</address>
                       <p class="mb-1">
                         <a class="link-secondary text-decoration-none text-white" >+54 937040000</a>
                       </p>
