--- a/landingPage.html
+++ b/landingPage.html
@@ -47,9 +47,8 @@
                         
                     </ul>
                 </div>
-                <div class="d-flex justify-content-end">
-                  <button class="btn btn-primary me-2 btn-inicio">Registrarse</button>
-                  <button class="btn btn-secondary btn-signup">Iniciar Sesión</button>
+                <div class="d-flex justify-content-end" id="usuarioD">
+                  <button class="btn btn-secondary btn-signup" id="usuarioB">Iniciar Sesión</button>
                 </div>
             </div>
         </nav>
@@ -217,7 +216,7 @@
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                     <div class="widget">
                       <a href="#!">
-                        <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                        <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
                       </a>
                     </div>
                   </div>
