Se agregaron los formularios

--- a/client/signup.html
+++ b/client/signup.html
@@ -24,11 +24,12 @@
             <!-- place navbar here -->
         </header>
         <main>
-            <div class="container d-flex flex-row col-md-8 mt-5 ">
+            <div class="container d-flex flex-row col-md-8 mt-5 justify-content-center ">
                 <!-- Acá está el formulario -->
-                <div class="formulario bg-danger w-100 d-flex flex-column align-items-center pt-5">
+                <div class="formulario bg-white w-75 d-flex flex-column align-items-center pt-5">
                     <h3>Crear cuenta</h3>
-                    <div class="mb-3 w-75 ">
+                    <form>
+                    <div class="mb-3 ">
                         <label for="" class="form-label ">Nombre de Usuario</label>  
                         <input
                             type="text"
@@ -39,7 +40,7 @@
                             placeholder="Fulanito";
                         />
                     </div>
-                    <div class="mb-3 w-75 ">
+                    <div class="mb-3  ">
                         <label for="" class="form-label ">Email</label>  
                         <input
                             type="text"
@@ -50,7 +51,7 @@
                             placeholder="Fulanito";
                         />
                     </div>
-                    <div class="mb-3 w-75 pr-5">
+                    <div class="mb-3 pr-5">
                         <label for="" class="form-label">Contraseña</label>
                         <input
                             type="password"
@@ -61,7 +62,7 @@
                             placeholder=""
                         />
                     </div>
-                    <div class="mb-3 w-75 pr-5">
+                    <div class="mb-3 pr-5">
                         <label for="" class="form-label">Repetir Contraseña</label>
                         <input
                             type="password"
@@ -84,6 +85,7 @@
                     >
                         Registrarse
                     </button>
+                    </form>
                     </div>
                 </div>
             </div>
