--- a/client/formulario.html
+++ b/client/formulario.html
@@ -57,11 +57,11 @@
                     <form class="form-container">
                         <div class="mb-3">
                             <label for="tipoInsulina" class="form-label">Tipo de Insulina</label>
-                            <input type="text" class="form-control" id="tipoInsulina" placeholder="Ingrese el tipo de insulina">
+                            <input type="text" class="form-control" id="tipoInput" placeholder="Ingrese el tipo de insulina">
                         </div>
                         <div class="mb-3">
                             <label for="tipoAccion" class="form-label">Tipo de Acción</label>
-                            <select class="form-select" id="tipoAccion">
+                            <select class="form-select" id="accionInput">
                                 <option selected>Seleccione</option>
                                 <option value="prolongada">Prolongada</option>
                                 <option value="rapida">Rápida</option>
@@ -71,21 +71,21 @@
                         </div>
                         <div class="mb-3">
                             <label for="dosis" class="form-label">Dosis Colocada</label>
-                            <input type="number" class="form-control" id="dosis" placeholder="Ingrese la dosis">
+                            <input type="number" class="form-control" id="dosisInput" placeholder="Ingrese la dosis">
                         </div>
                         <div class="mb-3">
                             <label for="fechaHora" class="form-label">Fecha y Hora</label>
-                            <input type="datetime-local" class="form-control" id="fechaHora">
+                            <input type="datetime-local" class="form-control" id="fechaInput">
                         </div>
                         <div class="mb-3">
                             <label for="viaAdministracion" class="form-label">Vía de Administración</label>
-                            <input type="text" class="form-control" id="viaAdministracion" placeholder="Ingrese la vía de administración">
+                            <input type="text" class="form-control" id="viaInput" placeholder="Ingrese la vía de administración">
                         </div>
                         <div class="mb-3">
                             <label for="notasAdicionales" class="form-label">Notas Adicionales</label>
-                            <textarea class="form-control" id="notasAdicionales" rows="3" placeholder="Ingrese cualquier nota adicional"></textarea>
+                            <textarea class="form-control" id="adicionalInput" rows="3" placeholder="Ingrese cualquier nota adicional"></textarea>
                         </div>
-                        <button type="button" onclick="guardar()" class="btn btn-primary btn-form">Guardar</button>
+                        <button type="button" onclick="guardarRegistro()" class="btn btn-primary btn-form">Guardar</button>
                     </form>
                 </div>
             </div>
