se agregó el archivo de crear artículo

--- a/client/home.html
+++ b/client/home.html
@@ -50,7 +50,7 @@
                     </ul>
                 </div>
                 <div class="d-flex justify-content-end" id="usuarioD">
-                  <a href="login.html"><button class="btn btn-secondary btn-signup" id="usuarioB">Inicia Sesión</button></a>
+                  <a href="landingPage.html"><button class="btn btn-secondary btn-signup" id="usuarioB">Cerrar Sesión</button></a>
                 </div>
             </div>
         </nav>
@@ -358,6 +358,5 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
-        <script src="assets/js/usuario.js"></script>
     </body>
 </html>
