--- a/client/listaRecetas.html
+++ b/client/listaRecetas.html
@@ -34,12 +34,9 @@
                             <a class="nav-link" href="listaRecetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html">Controla tu vida</a>
+                            <a class="nav-link" href="formulario.html">Controla tu vida</a>
                         </li>
                     </ul>
-                </div>
-                <div class="d-flex justify-content-end" id="usuarioD">
-                  <button class="btn btn-secondary btn-signup" id="usuarioB">Iniciar Sesión</button>
                 </div>
             </div>
         </nav>
