--- a/client/articulo1.html
+++ b/client/articulo1.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous"
         />
        
-        <link rel="stylesheet" href="articulo.css">
+        <link rel="stylesheet" href="/client/articulos/articulo.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="?hola" class="navbar-brand nav-logo">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -53,45 +53,11 @@
         </nav>
     </header>
     <div class="container article-container fade-in">
-        <h1 class="article-title">Vivir con diabetes: una guía para un control exitoso</h1>
+        <h1 class="article-title" id="titulo">Vivir con diabetes: una guía para un control exitoso</h1>
         <div class="image-section">
             <img src="https://images.unsplash.com/photo-1477332552946-cfb384aeaf1c?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Vivir con diabetes">
         </div>
-        <div class="article-content">
-            <p>La diabetes es una enfermedad crónica que afecta a millones de personas en todo el mundo. Si bien no tiene cura, se puede controlar con éxito mediante cambios en el estilo de vida, medicamentos y un seguimiento regular.</p>
-            <p>En este artículo, te ofrecemos una guía completa para vivir con diabetes y mantenerla bajo control:</p>
-            <h2>1. Comprensión de la diabetes:</h2>
-            <ul>
-                <li><strong>Tipos de diabetes:</strong> La diabetes tipo 1 y tipo 2 son los dos tipos más comunes. La diabetes tipo 1 es una enfermedad autoinmune en la que el cuerpo no produce insulina, mientras que la diabetes tipo 2 se caracteriza por la resistencia a la insulina o la producción insuficiente de insulina.</li>
-                <li><strong>Los niveles de azúcar en sangre:</strong> La glucosa, o azúcar en sangre, es la principal fuente de energía del cuerpo. La insulina ayuda a que la glucosa ingrese a las células para ser utilizada. En la diabetes, los niveles de azúcar en sangre pueden elevarse, lo que puede causar complicaciones a largo plazo.</li>
-            </ul>
-            <h2>2. El autocontrol de la diabetes:</h2>
-            <ul>
-                <li><strong>Plan de alimentación:</strong> Un plan de alimentación saludable es crucial para controlar la diabetes. Elija alimentos ricos en fibra y bajos en grasas saturadas y colesterol. Limite el consumo de azúcares añadidos y alimentos procesados. Un dietista puede ayudarlo a crear un plan de alimentación personalizado.</li>
-                <li><strong>Actividad física:</strong> La actividad física regular ayuda al cuerpo a usar la insulina de manera más eficaz y controla los niveles de azúcar en sangre. Apunte a al menos 30 minutos de actividad moderada la mayoría de los días de la semana.</li>
-                <li><strong>Medicamentos:</strong> Según el tipo de diabetes y su gravedad, es posible que necesite medicamentos para controlar sus niveles de azúcar en sangre. Estos pueden incluir insulina, medicamentos orales u otros tipos de terapias.</li>
-                <li><strong>Monitoreo del azúcar en sangre:</strong> Controle sus niveles de azúcar en sangre regularmente según las indicaciones de su médico. Esto le ayudará a saber cómo está funcionando su plan de tratamiento y si necesita hacer ajustes.</li>
-            </ul>
-            <h2>3. Adoptar un estilo de vida saludable:</h2>
-            <ul>
-                <li><strong>Manejo del peso:</strong> Si tiene sobrepeso u obesidad, perder incluso una pequeña cantidad de peso puede mejorar significativamente el control del azúcar en sangre.</li>
-                <li><strong>Dejar de fumar:</strong> Fumar aumenta el riesgo de enfermedades cardíacas y accidente cerebrovascular, complicaciones comunes de la diabetes. Si fuma, deje de fumar lo antes posible.</li>
-                <li><strong>Reducir el estrés:</strong> El estrés puede elevar los niveles de azúcar en sangre. Encuentre maneras saludables de manejar el estrés, como el ejercicio, la meditación o las técnicas de respiración profunda.</li>
-                <li><strong>Cuidar de sus pies:</strong> La diabetes puede dañar los nervios y los vasos sanguíneos de los pies. Revise sus pies a diario en busca de úlceras, callos o cambios en el color de la piel. Si tiene problemas en los pies, consulte a su médico de inmediato.</li>
-                <li><strong>Salud bucal:</strong> La diabetes también puede aumentar el riesgo de problemas de salud bucal. Cepíllese los dientes dos veces al día y use hilo dental una vez al día. Visite a su dentista para chequeos y limpiezas regulares.</li>
-            </ul>
-            <h2>4. Apoyo y recursos:</h2>
-            <ul>
-                <li><strong>Equipo de atención médica:</strong> Trabaje en estrecha colaboración con su equipo de atención médica, que incluye médicos, enfermeras, educadores en diabetes y otros profesionales de la salud. Ellos pueden ayudarlo a crear y ajustar su plan de tratamiento, responder preguntas y brindarle apoyo.</li>
-                <li><strong>Grupos de apoyo:</strong> Unirse a un grupo de apoyo para personas con diabetes puede brindarle la oportunidad de conectarse con otros que comprenden sus desafíos y compartir experiencias.</li>
-                <li><strong>Recursos en línea:</strong> Hay muchos recursos en línea disponibles para personas con diabetes, que incluyen sitios web, foros y aplicaciones. Estos recursos pueden brindarle información, apoyo y herramientas para ayudarlo a manejar su diabetes.</li>
-            </ul>
-            <h2>5. Recuerde:</h2>
-            <p>La diabetes es una enfermedad crónica, pero con el tratamiento y manejo adecuados, puede vivir una vida larga y saludable.</p>
-            <p>Es importante seguir su plan de tratamiento, controlar sus niveles de azúcar en sangre y realizar cambios en su estilo de vida.</p>
-            <p>No dude en comunicarse con su equipo de atención médica si tiene preguntas o inquietudes.</p>
-            <p>Hay muchos recursos disponibles para ayudarlo a vivir bien con diabetes.</p>
-            <p>¡Tome el control de su diabetes y viva una vida plena y saludable!</p>
+        <div class="article-content" id="contenido">
         </div>
     </div>
 
@@ -223,11 +189,12 @@
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
             crossorigin="anonymous"
         ></script>
-
+        <script src="assets/js/articulos.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+        <script>mostrarArticulo()</script>
     </body>
 </html>
