--- a/client/articulos.html
+++ b/client/articulos.html
@@ -45,6 +45,12 @@
       <div class="container-fluid">
         <a href="crearArticulo.html" class="btn btn-primary mb-2">Crear artículo</a>
        </div>
+       <!-- Lista de artículos -->
+       <div id="lista" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 g-4">
+        <h3>Hola</h3>
+        </div>
+        
+       </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 g-4">
             <div class="col">
               <div class="card h-100">
@@ -70,15 +76,6 @@
                 <div class="card-body">
                   <h5 class="card-title">Ejercicio y Diabetes: Salud en Movimiento </h5>
                   <p class="card-text">Cómo integrar rutinas de ejercicio para gestionar mejor la diabetes y mejorar la salud cardiovascular.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
               </div>
             </div>
@@ -209,5 +206,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-b/g0y3N5/t8+Zh0FukcGcVxZMFG5gN95y8U+Y9Qb5m38E4S9z4vexGtf6dD1MkjI" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-Mw+HoS+qu4FeXmN2zL1Nde7ZEbyEzjRUwK7FFtJEw6F6FJ4GQ5Tkmu5j/rGvB/Sc" crossorigin="anonymous"></script>
     <script src="assets/js/articulos.js"></script>
+    <script>listaArticulos()</script>
 </body>
 </html>
