--- a/client/articulos.html
+++ b/client/articulos.html
@@ -45,6 +45,7 @@
       <div class="container-fluid">
         <a href="crearArticulo.html" class="btn btn-primary mb-2">Crear artículo</a>
        </div>
+       <input type="text" id="buscador">
        <!-- Lista de artículos -->
        <div id="lista" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 g-4">
         <h3>Hola</h3>
