--- a/client/articulos.html
+++ b/client/articulos.html
@@ -31,10 +31,10 @@
                             <a class="nav-link" href="articulos.html">Artículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="listaRecetas.html">Recetas</a>
+                            <a class="nav-link" href="recetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login">Controla tu vida</a>
+                            <a class="nav-link" href="formulario.html">Controla tu vida</a>
                         </li>
                     </ul>
                 </div>
@@ -42,9 +42,9 @@
         </nav>
     </header>
     <main class="container my-5 pt-5">
-      <div class="container-fluid">
-        <a href="crearArticulo.html" class="btn btn-primary mb-2">Crear artículo</a>
-       </div>
+      <div class="container-fluid my-3">
+        <a href="crearArticulo.html" class="btn-crear text-decoration-none">Crear artículo</a>
+      </div>
        <!-- Lista de artículos -->
        <div id="lista" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 g-4">
         <h3>Hola</h3>
