--- a/client/home.html
+++ b/client/home.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="articulos.html">Artículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="listaRecetas.html">Recetas</a>
+                            <a class="nav-link" href="recetas.html">Recetas</a>
                         </li>
                         <li>
                           <a class="nav-link text-center" href="formulario.html">Controla tu salud</a>
