--- a/client/recetas.html
+++ b/client/recetas.html
@@ -34,19 +34,18 @@
                           <a class="nav-link" href="recetas.html">Recetas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="login.html">Controla tu vida</a>
+                        <a class="nav-link" href="formulario.html">Controla tu vida</a>
                     </li>
                     </ul>
-                </div>
-                <div class="d-flex justify-content-end">
-                  <button class="btn btn-primary me-2 btn-inicio">Registrarse</button>
-                  <button class="btn btn-secondary btn-signup">Iniciar Sesión</button>
                 </div>
             </div>
         </nav>
     </header>
     <main class="mt-5 pt-5">
         <div class="container">
+          <div class="container-fluid my-4">
+            <a href="crearReceta.html" class="btn-crear text-decoration-none">Crear receta</a>
+          </div>
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <div class="card h-100">
