--- a/client/login.html
+++ b/client/login.html
@@ -60,6 +60,7 @@
                         type="button"
                         class="btn btn-primary w-20 d-flex rounded-4 mt-2"
                         onclick="iniciarSesion()"
+                        id = "login"
                     >
                         Iniciar Sesión
                     </button>
