--- a/client/private/admin.html
+++ b/client/private/admin.html
@@ -18,12 +18,12 @@
         />
     </head>
 
-    <body>
-        <header>
+    <body class="bg-black">
+        <header class="bg-dark text-white">
             <!-- place navbar here -->
+            <h2 class="d-flex justify-content-center ">Panel de Administrador</h2>          
         </header>
         <main id="main">
-            <h2 class="d-flex justify-content-center mt-3">Panel de Administrador</h2>          
             <div id="lista" class="d-flex align-items-center flex-column">
             </div>
         </main>
