--- a/client/articulo.html
+++ b/client/articulo.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>LandingPage</title>
+        <title>Glucontrol - Leer</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
