--- a/client/articulos/articulo3.html
+++ b/client/articulos/articulo3.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
     <head>
         <title>LandingPage</title>
         <!-- Required meta tags -->
