se cambio el estilo del login, sign up y registros

--- a/client/crearArticulo.html
+++ b/client/crearArticulo.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="recetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login">Controla tu vida</a>
+                            <a class="nav-link" href="formulario.html">Controla tu vida</a>
                         </li>
                     </ul>
                 </div>
@@ -95,16 +95,16 @@
                 <h4 class="widget-title mb-4 ">Leer más</h4>
                 <ul class="list-unstyled text-primary text-white">
                   <li class="mb-2">
-                    <a href="#!" class="link-secondary text-decoration-none text-white">Home</a>
+                    <a href="home.html" class="link-secondary text-decoration-none text-white">Home</a>
                   </li>
                   <li class="mb-2">
                     <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                   </li>
                   <li class="mb-2">
-                    <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                    <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                   </li>
                   <li class="mb-2">
-                    <a href="login.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                    <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
                   </li>
                 </ul>
               </div>
