--- a/client/formulario.html
+++ b/client/formulario.html
@@ -125,7 +125,7 @@
                         <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                       </li>
                       <li class="mb-2">
-                        <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                        <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                       </li>
                       <li class="mb-2">
                         <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
