--- a/client/home.html
+++ b/client/home.html
@@ -81,7 +81,7 @@
                 <div  class= "carousel-caption">
                     <h5>Cocina Saludable</h5>
                     <p>Explora recetas sabrosas y nutritivas que te ayudarán a mantener un estilo de vida saludable y controlar la diabetes de manera deliciosa y efectiva.</p>
-                    <button class="btn btn-primary btn-inicio"><a href="listaRecetas.html" class="text-decoration-none">Entrar</a></button>
+                    <button class="btn btn-primary btn-inicio"><a href="recetas.html" class="text-decoration-none">Entrar</a></button>
                    
                 </div>
             </div>
@@ -258,7 +258,7 @@
                           <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                         </li>
                         <li class="mb-2">
-                          <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                          <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                         </li>
                         <li class="mb-2">
                           <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
