--- a/client/login.html
+++ b/client/login.html
@@ -1,87 +1,55 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Glucontrol - Iniciar Sesión</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+<head>
+    <title>Glucontrol - Iniciar Sesión</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="../client/assets/css/login.css">
-    </head>
-
-    <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
-        <main>
-            <div class="container d-flex flex-row col-md-8 mt-5 rounded-3">
-                <!-- Acá está la imágen -->
-                <div class="imagen bg-dark d-flex w-50"><img src="fondo.jpg" width="auto" height="400px" alt="" srcset=""></div>
-                <!-- Acá está el formulario -->
-                <div class="formulario bg-white w-50 d-flex flex-column align-items-center pt-5">
-                    <h3>Iniciar Sesión</h3>
-                    <div class="mb-3 w-75 ">
-                        <label for="" class="form-label ">Nombre de Usuario</label>  
-                        <input
-                            type="text"
-                            class="form-control bg-transparent bt-dark"
-                            name="yo"
-                            id="nameInput"
-                            aria-describedby="helpId"
-                            placeholder="Fulanito";
-                        />
+    <!-- Bootstrap CSS v5.3.2 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../client/assets/css/login.css">
+</head>
+<body>
+    <header>
+        <!-- place navbar here -->
+    </header>
+    <main>
+        <div class="container d-flex flex-column align-items-center justify-content-center vh-100">
+            <div class="card col-md-8 shadow-lg border-0 rounded-3 overflow-hidden animate__animated animate__fadeIn">
+                <div class="row g-0">
+                    <!-- Acá está la imagen -->
+                    <div class="col-md-6 d-none d-md-block">
+                        <img src="https://images.pexels.com/photos/5168518/pexels-photo-5168518.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid h-100 animate__animated animate__fadeInLeft" alt="Imagen de fondo">
                     </div>
-                    <div class="mb-3 w-75 pr-5">
-                        <label for="" class="form-label">Contraseña</label>
-                        <input
-                            type="password"
-                            class="form-control bg-transparent"
-                            name=""
-                            id="passwordInput"
-                            aria-describedby="helpId"
-                            placeholder=""
-                        />
-                    </div>
-                    <div class="d-flex align-items-center flex-column mt-5">
-                    <div>
-                        <span>¿No tienes una cuenta?</span><a href="signup.html">Crear una</a>
-                    </div>
-                    <button
-                        type="button"
-                        class="btn btn-primary w-20 d-flex rounded-4 mt-2"
-                        onclick="iniciarSesion()"
-                    >
-                        Iniciar Sesión
-                    </button>
+                    <!-- Acá está el formulario -->
+                    <div class="col-md-6 bg-white p-5 d-flex flex-column align-items-center animate__animated animate__fadeInRight">
+                        <h3 class="mb-4">Iniciar Sesión</h3>
+                        <form class="w-100">
+                            <div class="mb-3 w-100">
+                                <label for="nameInput" class="form-label">Nombre de Usuario</label>
+                                <input type="text" class="form-control bg-light border-0" id="nameInput" placeholder="Fulanito" />
+                            </div>
+                            <div class="mb-3 w-100">
+                                <label for="passwordInput" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control bg-light border-0" id="passwordInput" placeholder="" />
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center w-100 mt-4">
+                                <span>¿No tienes una cuenta? <a href="signup.html">Crear una</a></span>
+                            </div>
+                            <button type="button" class="btn btn-inicio w-100 mt-3 rounded-3" onclick="iniciarSesion()">Iniciar Sesión</button>
+                        </form>
                     </div>
                 </div>
             </div>
-        </main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-        <script src="./assets/js/login.js"></script>
-    </body>
+        </div>
+    </main>
+    <footer>
+        <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="./assets/js/login.js"></script>
+</body>
 </html>
