se añadieron los archivos en los enlaces y botones del carrusel

--- a/client/recetas.html
+++ b/client/recetas.html
@@ -18,7 +18,7 @@
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -116,20 +116,20 @@
             <div class="row gy-4 gy-lg-0 justify-content-xl-between">
               <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <div class="widget">
-                  <a href="#!">
-                    <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                  <a href="home.html">
+                    <img src="./assets/img/logoedit.jpg" alt="" width="175" height="57">
                   </a>
                 </div>
               </div>
               <div class="col-12 col-md-4 col-lg-3 col-xl-2 text-primary text-white">
                 <div class="widget">
-                  <h4 class="widget-title mb-4 ">encontranos</h4>
-                  <address class="mb-4 text-white" >plaza san martin </address>
+                  <h4 class="widget-title mb-4 ">Encontranos</h4>
+                  <address class="mb-4 text-white" >Instituto Politécnico Formosa </address>
                   <p class="mb-1">
-                    <a class="link-secondary text-decoration-none text-white" href="tel:+15057922430">12345678</a>
+                    <a class="link-secondary text-decoration-none text-white" href="tel:+15057922430">+54 9370 40000</a>
                   </p>
                   <p class="mb-0">
-                    <a class="link-secondary text-decoration-none text-white" href="mailto:demo@yourdomain.com">diabetes@gmail.com</a>
+                    <a class="link-secondary text-decoration-none text-white" href="mailto:demo@yourdomain.com">glucontrol@gmail.com</a>
                   </p>
                 </div>
               </div>
@@ -147,7 +147,7 @@
                         <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                       </li>
                     <li class="mb-2">
-                      <a href="login.html" class="link-secondary text-decoration-none text-white">Registros</a>
+                      <a href="formulario.html" class="link-secondary text-decoration-none text-white">Registros</a>
                     </li>
                     
                   </ul>
@@ -156,7 +156,7 @@
               <div class="col-12 col-lg-3 col-xl-4">
                 <div class="widget text-white">
                   <h4 class="widget-title mb-4">Contactanos</h4>
-                  <p class="mb-4">Suscribiti y enterate de lo último</p>
+                  <p class="mb-4">Suscribite y enterate de lo último</p>
                   <form action="#!">
                     <div class="row gy-4">
                       <div class="col-12">
@@ -171,7 +171,7 @@
                       </div>
                       <div class="col-12">
                         <div class="d-grid">
-                          <button class="btn-footer" type="submit">Subscribe</button>
+                          <button class="btn-footer" type="submit">Suscribite</button>
                         </div>
                       </div>
                     </div>
