--- a/client/articulo.html
+++ b/client/articulo.html
@@ -27,7 +27,7 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="?hola" class="navbar-brand nav-logo">Logo</a>
+                <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="../articulos.html">Artículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../listaRecetas.html">Recetas</a>
+                            <a class="nav-link" href="recetas.html">Recetas</a>
                         </li>
                         <li>
                           <a class="nav-link text-center" href="../formulario.html">Controla tu salud</a>
@@ -67,7 +67,7 @@
           <div class="row gy-4 gy-lg-0 justify-content-xl-between">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
               <div class="widget">
-                <a href="#!">
+                <a href="home.html">
                   <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
                 </a>
               </div>
@@ -95,7 +95,7 @@
                     <a href="../articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                   </li>
                   <li class="mb-2">
-                    <a href="../listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                    <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                   </li>
                   <li class="mb-2">
                     <a href="../formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
