--- a/client/articulos.html
+++ b/client/articulos.html
@@ -18,7 +18,7 @@
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -91,8 +91,8 @@
           <div class="row gy-4 gy-lg-0 justify-content-xl-between">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
               <div class="widget">
-                <a href="#!">
-                  <img src="./assets/img/bsb-logo.svg" alt="" width="175" height="57">
+                <a href="home.html">
+                  <img src="./assets/img/logoedit.jpg" alt="" width="175" height="57">
                 </a>
               </div>
             </div>
@@ -122,7 +122,7 @@
                     <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                   </li>
                   <li class="mb-2">
-                    <a href="login.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                    <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
                   </li>
                 </ul>
               </div>
