--- a/client/landingPage.html
+++ b/client/landingPage.html
@@ -26,7 +26,7 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" class="img-fluid" style="height: 40px;" alt=""></a>
+                <a href="landingPage.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" class="img-fluid" style="height: 40px;" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -79,7 +79,7 @@
                     <div  class= "carousel-caption">
                         <h5>Toma el control de tu salud</h5>
                         <p>Aquí encontrarás el apoyo y las herramientas necesarias para tomar el control de tu salud y alcanzar un estilo de vida más saludable y pleno.</p>
-                        <button class="btn btn-primary btn-inicio">Entrar</button>
+                        <a href="login.html" class="btn btn-inicio">Entrar</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -87,7 +87,7 @@
                     <div  class= "carousel-caption" >
                       <h5>Como gestionar tu diabete con éxito</h5>
                       <p>Descubre estrategias efectivas para controlar tu diabetes y mejorar tu calidad de vida.</p>
-                        <button class="btn btn-primary btn-inicio">Entrar</button>
+                        <a href="login.html" class="btn btn-inicio">Entrar</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -95,7 +95,7 @@
                     <div  class= "carousel-caption">
                         <h5>Ejercicio y Diabetes: Salud en Movimiento </h5>
                         <p> Aprende cómo el ejercicio puede mejorar tu vida con diabetes y mantenerte saludable. ¡Infórmate más aquí!</p>
-                        <button class="btn btn-primary btn-inicio">Entrar</button>
+                        <a href="login.html" class="btn  btn-inicio">Entrar</a>
                        
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                 <div class="row gy-4 gy-lg-0 justify-content-xl-between">
                   <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                     <div class="widget">
-                      <a href="#!">
+                      <a href="landingPage.html">
                         <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
                       </a>
                     </div>
@@ -201,7 +201,7 @@
                       <h4 class="widget-title mb-4 ">Leer más</h4>
                       <ul class="list-unstyled text-primary text-white">
                         <li class="mb-2">
-                          <a href="login.html" class="link-secondary text-decoration-none text-white">Iniciar Sesión</a>
+                          <a href="login.html" class="link-secondary text-decoration-none text-white">Home</a>
                         </li>
                         <li class="mb-2">
                           <a href="login.html" class="link-secondary text-decoration-none text-white">Articulos</a>
@@ -218,7 +218,7 @@
                   <div class="col-12 col-lg-3 col-xl-4">
                     <div class="widget text-white">
                       <h4 class="widget-title mb-4">Contactanos</h4>
-                      <p class="mb-4">Suscríbite y enterate de lo último</p>
+                      <p class="mb-4">Suscribite y enterate de lo último</p>
                       <form action="#!">
                         <div class="row gy-4">
                           <div class="col-12">
