--- a/client/registros.html
+++ b/client/registros.html
@@ -30,14 +30,14 @@
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
+                <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="Home.html">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="home.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="articulos.html">Artículos</a>
@@ -78,7 +78,7 @@
           <div class="row gy-4 gy-lg-0 justify-content-xl-between">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
               <div class="widget">
-                <a href="#!">
+                <a href="home.html">
                   <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
                 </a>
               </div>
@@ -106,7 +106,7 @@
                     <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                   </li>
                   <li class="mb-2">
-                    <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                    <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                   </li>
                   <li class="mb-2">
                     <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
