Agregar Recetas - Ver Recetas

--- a/client/ver/articulo.html
+++ b/client/ver/articulo.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous"
         />
        
-        <link rel="stylesheet" href="/client/articulos/articulo.css">
+        <link rel="stylesheet" href="../assets/css/articulo.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
