--- a/client/landingPage.html
+++ b/client/landingPage.html
@@ -26,15 +26,12 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="landingPage.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" class="img-fluid" style="height: 40px;" alt=""></a>
+                <a href="landingPage.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" class="logo-img" style="height: 40px;" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white " aria-current="page" href="login.html">Home</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Artículos</a>
                         </li>
@@ -42,7 +39,7 @@
                             <a class="nav-link" href="login.html">Recetas</a>
                         </li>
                         <li>
-                          <a class="nav-link text-center" href="login.html">Controla tu salud</a>
+                          <a class="nav-link text-center" href="login.html">Registros</a>
                         </li>
                         
                     </ul>
@@ -210,7 +207,7 @@
                           <a href="login.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                         </li>
                         <li class="mb-2">
-                          <a href="login.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                          <a href="login.html" class="link-secondary text-decoration-none text-white">Registros</a>
                         </li>
                       </ul>
                     </div>
