--- a/client/crearReceta.html
+++ b/client/crearReceta.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS v5.3.2 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     
-    <link rel="stylesheet" href="recetas/receta.css">
+    <link rel="stylesheet" href="assets/css/receta.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -19,15 +19,14 @@
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
+                <a href="home.html" class="navbar-brand nav-logo">
+                  <img src="assets/img/logoedit.jpg" class="logo-img">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="home.html">Home</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="articulos.html">Artículos</a>
                         </li>
@@ -35,9 +34,12 @@
                             <a class="nav-link" href="recetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="formulario.html">Controla tu vida</a>
+                            <a class="nav-link" href="formulario.html">Registros</a>
                         </li>
                     </ul>
+                </div>
+                <div class="d-flex justify-content-end" id="usuarioD">
+                  <a href="landingPage.html"><button class="btn btn-secondary btn-signup" id="usuarioB">Cerrar Sesión</button></a>
                 </div>
             </div>
         </nav>
@@ -65,7 +67,7 @@
                                 <a
                                   name=""
                                   id="crearReceta"
-                                  class="btn btn-primary"
+                                  class="btn btn-crear"
                                   href="#"
                                   role="button"
                                   >Crear receta</a
@@ -115,7 +117,7 @@
                     <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                   </li>
                   <li class="mb-2">
-                    <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                    <a href="formulario.html" class="link-secondary text-decoration-none text-white">Registros</a>
                   </li>
                 </ul>
               </div>
