--- a/client/formulario.html
+++ b/client/formulario.html
@@ -26,15 +26,14 @@
         <header class="header" id="header">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <div class="container-fluid">
-                    <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
+                    <a href="home.html" class="navbar-brand nav-logo">
+                      <img src="assets/img/logoedit.jpg" class="logo-img">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active text-white " aria-current="page" href="home.html">Home</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="articulos.html">Artículos</a>
                             </li>
@@ -42,9 +41,12 @@
                                 <a class="nav-link" href="recetas.html">Recetas</a>
                             </li>
                             <li>
-                              <a class="nav-link text-center" href="formulario.html">Controla tu salud</a>
+                              <a class="nav-link text-center" href="formulario.html">Registros</a>
                             </li>
                         </ul>
+                    </div>
+                    <div class="d-flex justify-content-end" id="usuarioD">
+                      <a href="landingPage.html"><button class="btn btn-secondary btn-signup" id="usuarioB">Cerrar Sesión</button></a>
                     </div>
                 </div>
             </nav>
@@ -128,7 +130,7 @@
                         <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                       </li>
                       <li class="mb-2">
-                        <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                        <a href="formulario.html" class="link-secondary text-decoration-none text-white">Registros</a>
                       </li>
                     </ul>
                   </div>
