--- a/client/registros.html
+++ b/client/registros.html
@@ -30,15 +30,14 @@
     <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="home.html" class="navbar-brand nav-logo"><img src="assets/img/logoedit.jpg" alt=""></a>
+                <a href="home.html" class="navbar-brand nav-logo">
+                  <img src="assets/img/logoedit.jpg" alt="" class="logo-img">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="home.html">Home</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="articulos.html">Artículos</a>
                         </li>
@@ -46,9 +45,12 @@
                           <a class="nav-link" href="recetas.html">Recetas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="formulario.html">Controla tu vida</a>
+                        <a class="nav-link" href="formulario.html">Registros</a>
                     </li>
                     </ul>
+                </div>
+                <div class="d-flex justify-content-end" id="usuarioD">
+                  <a href="landingPage.html"><button class="btn btn-secondary btn-signup" id="usuarioB">Cerrar Sesión</button></a>
                 </div>
             </div>
         </nav>
@@ -109,7 +111,7 @@
                     <a href="recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                   </li>
                   <li class="mb-2">
-                    <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                    <a href="formulario.html" class="link-secondary text-decoration-none text-white">Registros</a>
                   </li>
                 </ul>
               </div>
