--- a/client/ver/receta.html
+++ b/client/ver/receta.html
@@ -26,23 +26,23 @@
       <header class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand nav-logo">Logo</a>
+                <a href="#" class="navbar-brand nav-logo">
+                  <img src="../assets/img/logoedit.jpg" class="logo-img">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-white " aria-current="page" href="../home.html">Home</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="../articulos.html">Artículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../listaRecetas.html">Recetas</a>
+                            <a class="nav-link" href="../recetas.html">Recetas</a>
                         </li>
                         <li>
-                          <a class="nav-link text-center" href="../formulario.html">Controla tu salud</a>
+                          <a class="nav-link text-center" href="../formulario.html">Registros</a>
                         </li>
                         
                     </ul>
@@ -78,14 +78,14 @@
           <div class="col-12 col-md-4 col-lg-3 col-xl-2">
             <div class="widget">
               <a href="#!">
-                <img src="assets/img/logoedit.jpg" alt="" width="175" height="57">
+                <img src="../assets/img/logoedit.jpg" alt="" width="175" height="57">
               </a>
             </div>
           </div>
           <div class="col-12 col-md-4 col-lg-3 col-xl-2 text-primary text-white">
             <div class="widget">
-              <h4 class="widget-title mb-4 ">encontranos</h4>
-              <address class="mb-4 text-white" >plaza san martin </address>
+              <h4 class="widget-title mb-4 ">Encontranos</h4>
+              <address class="mb-4 text-white" >Instituto Poltécnico Formosa </address>
               <p class="mb-1">
                 <a class="link-secondary text-decoration-none text-white" >+54 937040000</a>
               </p>
@@ -99,16 +99,16 @@
               <h4 class="widget-title mb-4 ">Leer más</h4>
               <ul class="list-unstyled text-primary text-white">
                 <li class="mb-2">
-                  <a href="home.html" class="link-secondary text-decoration-none text-white">Home</a>
+                  <a href="../home.html" class="link-secondary text-decoration-none text-white">Home</a>
                 </li>
                 <li class="mb-2">
-                  <a href="articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
+                  <a href="../articulos.html" class="link-secondary text-decoration-none text-white">Articulos</a>
                 </li>
                 <li class="mb-2">
-                  <a href="listaRecetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
+                  <a href="../recetas.html" class="link-secondary text-decoration-none text-white">Recetas</a>
                 </li>
                 <li class="mb-2">
-                  <a href="formulario.html" class="link-secondary text-decoration-none text-white">Controla tu salud</a>
+                  <a href="../formulario.html" class="link-secondary text-decoration-none text-white">Registros</a>
                 </li>
               </ul>
             </div>
