Se centraron los botones

--- a/client/articulos.html
+++ b/client/articulos.html
@@ -45,8 +45,8 @@
         </nav>
     </header>
     <main class="container my-5 pt-5">
-      <div class="container-fluid my-3">
-        <a href="crearArticulo.html" class="btn-crear text-decoration-none">Crear artículo</a>
+      <div class="d-flex justify-content-center mb-3  ">
+        <a href="crearArticulo.html" class="btn-crear text-decoration-none ">Crear artículo</a>
       </div>
        <!-- Lista de artículos -->
        <div id="lista" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 g-4 ">
