--- a/client/recetas.html
+++ b/client/recetas.html
@@ -46,7 +46,7 @@
     </header>
     <main class="container my-5 pt-5">
 
-      <div class="container-fluid my-3" >
+      <div class="d-flex justify-content-center mb-3" >
         <a href="crearReceta.html" class="btn btn-crear text-decoration-none">Crear Receta</a>
        </div>
        <!-- Lista de artículos -->
