--- a/client/usuario.html
+++ b/client/usuario.html
@@ -79,7 +79,11 @@
           alt="Vivir con diabetes"
         />
       </div>
-      <div class="article-content" id="articulos"></div>
+      <div class="article-content" id="articulos"><h3>Articulos hechos:</h3>
+
+        </div>
+        
+      </div>
     </div>
 
     <footer class="footer">
