Se arregló el registro

--- a/client/usuario.html
+++ b/client/usuario.html
@@ -80,7 +80,9 @@
         />
       </div>
       <div class="article-content" id="articulos"><h3>Articulos hechos:</h3>
-
+        <div class="d-flex justify-content-end">
+          <img src="./assets/img/edit.svg" alt="" >
+        </div>
         </div>
         
       </div>
